--- a/src/containers/HomePage/Section/About.scss
+++ b/src/containers/HomePage/Section/About.scss
@@ -9,6 +9,7 @@
         padding: 20px 10px;
         font-size: 22px;
         text-align: left;
+        margin-top: 50px;
     }
 
     .section-about-content {
