--- a/src/containers/HomePage/Section/Specialty.scss
+++ b/src/containers/HomePage/Section/Specialty.scss
@@ -43,6 +43,8 @@
             }
 
             .specialty-customize {
+                padding: 10px;
+                cursor: pointer;
 
                 .room-image {
                     width: 400px;
