--- a/src/containers/System/Admin/ManageEmployer.scss
+++ b/src/containers/System/Admin/ManageEmployer.scss
@@ -1,4 +1,4 @@
-.manage-room-container {
+.manage-employer-container {
     padding: 30px;
 
     .more-infor {
@@ -15,7 +15,7 @@
         }
     }
 
-    .manage-room-title {
+    .manage-employer-title {
         text-align: center;
         text-transform: uppercase;
         font-weight: bold;
@@ -24,7 +24,7 @@
         margin-bottom: 15px;
     }
 
-    .save-content-room {
+    .save-content-employer {
         margin-top: 20px;
         margin-bottom: 30px;
         border-radius: 5px;
@@ -39,7 +39,7 @@
         }
     }
 
-    .create-content-room{
+    .create-content-employer {
         margin-top: 20px;
         margin-bottom: 30px;
         border-radius: 5px;
