--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -28,7 +28,21 @@
         margin-right: 40px;
         position: absolute;
         top: 8px;
-        right: 16px;
+        right: 100px;
         font-size: 18px;
     }
+
+    .back-to-home {
+        color: white;
+        text-decoration: none;
+        font-size: 5px;
+        position: absolute;
+        right: 40px;
+        top: 6px;
+
+        .name-home {
+            font-size: 18px;
+        }
+    }
+
 }
