--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -26,7 +26,7 @@
         .topnav {
             background-color: white;
             overflow: hidden;
-            margin: auto
+            margin: auto;
         }
 
         /* Style the links inside the navigation bar */
@@ -51,69 +51,6 @@
 
         /* Add a color to the active/current link */
         .topnav a.active {}
-    }
-
-
-}
-
-.home-header-banner {
-    background: url('../../assets/images/17359438_259013037892288_4493684070653207878_o.jpg') no-repeat;
-    width: 100%;
-    height: 870px;
-    background-size: cover;
-    background-position: center;
-    padding: 280px 0;
-    display: flex;
-    flex-direction: column;
-
-    .content-up {
-        height: 50%;
-
-        .title1 {
-            text-align: center;
-            font-size: 40px;
-            text-shadow: 3px 3px 3px #333;
-            margin-bottom: 15px;
-            color: yellow;
-
-        }
-
-        .title2 {
-            text-align: center;
-            font-size: 40px;
-            text-shadow: 3px 3px 3px #333;
-            margin-bottom: 15px;
-            color: yellow;
-            margin-bottom: 15px;
-
-
-
-        }
-
-        .search {
-            border: 1px solid black;
-            width: fit-content;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto;
-            padding: 10px;
-            width: 350px;
-            border-radius: 30px;
-            background: yellow;
-
-            i {
-                margin: 0 5px;
-            }
-
-            input {
-                height: 30px;
-                width: 360px;
-                background: transparent;
-                border: none;
-                outline: none
-            }
-        }
     }
 
 
