--- a/src/containers/HomePage/Section/RoomInforList.scss
+++ b/src/containers/HomePage/Section/RoomInforList.scss
@@ -36,7 +36,7 @@
 
         .specialty-body {
 
-            .title-employer {
+            .title-room {
                 text-align: center;
                 font-size: large;
                 width: 400px;
@@ -46,7 +46,7 @@
                 padding: 10px;
                 cursor: pointer;
 
-                .employer-image {
+                .room-image {
                     width: 400px;
                     height: 200px;
                     // background: url(../../../assets/Specialty/2.jpg);
