--- a/src/containers/HomePage/Contact.css
+++ b/src/containers/HomePage/Contact.css
@@ -12,7 +12,7 @@ label {
     margin-top: 1rem;
 }
 
-input,
+/* input,
 textarea {
     width: 100%;
     padding: 10px;
@@ -47,7 +47,7 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background: #ff8c4b;
-}
+} */
 
 .contact-infor {
     display: flex;
